added config.py to be ignored

--- a/EmployeeSQL/SQaLchemy.ipynb
+++ b/EmployeeSQL/SQaLchemy.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from config import local_pw"
    ]
   },
   {
@@ -37,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create engine and connection for database \"departments\"\n",
-    "engine= create_engine('postgresql://postgres:jmballer29@localhost:5432/employee_db')\n",
+    "engine= create_engine(f'postgresql://postgres:{local_pw}@localhost:5432/employee_db')\n",
     "conn = engine.connect()"
    ]
   },
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +235,7 @@
        "[300024 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
